[gd_scene load_steps=5 format=3 uid="uid://3t8lt7eqxsm3"]

[ext_resource type="Texture2D" uid="uid://c1f6xuj1pj3vp" path="res://assets/artwork/drawer.png" id="1_7457s"]
[ext_resource type="Script" uid="uid://cm4krsods2vj4" path="res://scenes/inbox_2d.gd" id="1_fubrp"]
[ext_resource type="Texture2D" uid="uid://do2cutmgyfewn" path="res://assets/artwork/folder.png" id="2_fubrp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7457s"]
size = Vector2(162, 56)

[node name="Inbox2D" type="Node2D"]
script = ExtResource("1_fubrp")

[node name="DrawerSprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_7457s")

[node name="FilesSprite2D" type="Sprite2D" parent="DrawerSprite2D"]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(0, -6)
texture = ExtResource("2_fubrp")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_7457s")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
